--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }} # EC2의 Key 파일의 내부 텍스트
           script_stop: true # 아래 script 중 실패하는 명령이 하나라도 있으면 실패로 처리
           script: |
-            echo "로그인 완료"
-            #cd /home/ubuntu/2024newboard
-            $git pull origin main
+            cd /home/ubuntu/2024newboard
+            git pull origin main
+            cd /front
