--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
           script: |
             whoami
             ls
-            cd /home/ubuntu/2024newboard
+            cd /2024newboard
             git pull origin main
             ls -a
