--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }} # EC2의 주소
           username: ${{ secrets.EC2_USERNAME }} # EC2 접속 username
           key: ${{ secrets.EC2_PRIVATE_KEY }} # EC2의 Key 파일의 내부 텍스트
-          #script_stop: true # 아래 script 중 실패하는 명령이 하나라도 있으면 실패로 처리
+          script_stop: true # 아래 script 중 실패하는 명령이 하나라도 있으면 실패로 처리
           script: |
-            whoami
-            ls
-            cd 2024newboard
+            cd /home/ubuntu/2024newboard
             sudo git pull origin main
-            ls -a
+            cd front
+            npm install
+            npm run dev
+            sudo systemctl reload nginx
